# AntiAtropos

./: .dockerignore  .env.example  .env.hf.example  .gitattributes  .gitignore  AGENTS.md  Blog.md  Dockerfile  HF_BLOG.md  OBSERVABILITY_SETUP.md  OPENENV_PROMETHEUS_KUBERNETES_ROADMAP.md  README.md  REWARD_FUNCTION.md  TODOLIST.md  __init__.py  agent_smoke.py  baseline_agent.py  check_stability.py  client.py  curriculum.py  debugging.md  deploy-local.ps1  docker-compose.local-monitoring.yml  docker-compose.observability.yml  example_verification.py  fix_colab_mcp.py  grader.py  inference.py  inference_all_tasks.py  instructions.md  llm_agent.py  llm_agent_task1.py  llm_agent_task2.py  llm_agent_task3.py  local_validator.py  models.py  openenv.yaml  openenvREADME.md  patcher.yaml  pyproject.toml  (+18 more)
AntiApropos/: README.md  __init__.py  client.py  (+3 more)
AntiAtropos/: .dockerignore  CLAUDE.md  README.md  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  replay.py  simulator.py  smoke_test.py  stability.py  train_test.py
AntiAtropos/.qoder/plans/: RL_Pipeline_Overhaul_d7c34a04.md
AntiAtropos/control/: __init__.py  kubernetes_executor.py
AntiAtropos/deploy/: index.html  nginx.conf  prometheus.yml
AntiAtropos/deploy/aws/: ARCHITECTURE.md  OPERATIONS.md  README.md  deploy.ps1  deploy.sh  eksctl-cluster.yaml  k8s-workloads.yaml  kubeconfig-antiatropos.yaml
AntiAtropos/deploy/grafana/: grafana.ini
AntiAtropos/deploy/grafana/provisioning/dashboards/: dashboard.yaml
AntiAtropos/server/: AntiAtropos_environment.py  Dockerfile  app.py  requirements.txt
AntiAtropos/telemetry/: __init__.py  mapping.py  observability.py  prometheus_client.py
AntiAtropos/training/: __init__.py
(+95 files in other folders)
